[package]
name = "drainpipe"
version = "0.2.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
futures-util = "0.3"
serde = "1.0.203"
serde_json = { version = "1.0" }
tokio = { version = "1.38.0", features = ["full"] }
tokio-metrics = "0.3.1"
tokio-tungstenite = { version = "0.23.0", features = ["native-tls"] }
