[package]
name = "drainpipe"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
atrium-api = "0.24.7"
chrono = "0.4.38"
dotenv-flow = "0.16.2"
drainpipe-store = { path = "../drainpipe-store" }
env_logger = "0.11.5"
futures-util = "0.3"
jetstream = { path = "../jetstream" }
log = "0.4.22"
metrics-exporter-prometheus = { version = "0.17.2", features = [
  "http-listener",
] }
metrics-util = "0.20.0"
prometheus = "0.14.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
sled = "0.34.7"
tokio = { version = "1.38.0", features = ["full"] }
tokio-metrics = "0.3.1"
tokio-metrics-collector = "0.3.1"
