[package]
name = "jetstream"
version = "0.1.0"
edition = "2021"

[dependencies]
atrium-api = "0.24.8"
chrono = { version = "0.4.38", features = ["serde"] }
flume = "0.11.1"
futures-util = "0.3.31"
log = "0.4.22"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.132"
thiserror = "2.0.3"
tokio = { version = "1.38.0", features = ["full"] }
tokio-tungstenite = { version = "0.24.0", features = ["native-tls"] }
url = "2.5.4"
zstd = "0.13.2"
